# Pashas_laba

./: CMakeLists.txt  Tests.cpp  main.cpp  main.h
